# Nexus

./: .gitignore  AI_ASSISTANT_USAGE.md  Dockerfile  README.md  docker-compose.yml  evaulate_rag.py  extracted_chunks.json  extracted_chunks_v2.json  main.py  pyproject.toml
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: AgentLogPanel.jsx  IngestionTab.jsx  InstructionsBanner.jsx  QuizTab.jsx
frontend/src/lib/: api.js
src/: __init__.py  job_status_store.py
src/ingestion/: __init__.py  embedder.py  pdf_parser.py  ppt_parser.py
src/quiz/: __init__.py  generator.py  schemas.py
src/retrieval/: sampler.py
