[project]
name = "scholera-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.90",
    "fastapi>=0.136.0",
    "instructor>=1.15.1",
    "ipykernel>=7.2.0",
    "langchain-aws>=1.4.4",
    "pydantic>=2.13.1",
    "pymupdf4llm>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "python-pptx>=1.0.2",
    "qdrant-client>=1.17.1",
    "uvicorn>=0.44.0",
]
